telepathy-qt4 (0.5.15-1) UNRELEASED; urgency=low

  * New upstream release.
  * debian/rules: Update to use cmake now.
  * debian/control: Add cmake Build-Dep.

 -- Jonny Lamb <jonny@debian.org>  Thu, 14 Apr 2011 10:53:46 +0100

telepathy-qt4 (0.3.8-1) unstable; urgency=low

  * New upstream relase.
  * Make libtelepathy-qt4-dev depend on libtelepathy-farsight-dev,
    to agree with the header and runtime dependencies on the same.
  * Add myself to Uploaders.

 -- Adam Conrad <adconrad@0c3.net>  Wed, 25 Aug 2010 16:31:01 -0600

telepathy-qt4 (0.3.6-1) unstable; urgency=low

  [ George Goldberg ]
  * Update to new upstream release

 -- Jonny Lamb <jonny@debian.org>  Wed, 14 Jul 2010 14:18:54 +0100

telepathy-qt4 (0.3.5-1) unstable; urgency=low

  [ George Goldberg ]
  * Update to new upstream release

  [ Jonny Lamb ]
  * debian/control: Upped Standards-Version. (no changes)

 -- Jonny Lamb <jonny@debian.org>  Thu, 24 Jun 2010 18:57:42 +0100

telepathy-qt4 (0.3.2-1) unstable; urgency=low

  [ George Goldberg ]
  * Update to new upstream release
  * Build now depends on telepathy-glib >=0.10.0

  [ Jonny Lamb ]
  * debian/control: Added George and myself to Uploaders.

 -- Jonny Lamb <jonny@debian.org>  Sat, 24 Apr 2010 14:47:07 +0100

telepathy-qt4 (0.2.0-2) unstable; urgency=low

  * Move Build-Depends-Indep to Build-Depends, working around #478524 in
    sbuild (Closes: #557032)
  * Disable tests for now, due to race conditions in the test code that can't
    usefully be debugged on a buildd

 -- Simon McVittie <smcv@debian.org>  Thu, 19 Nov 2009 12:22:40 +0000

telepathy-qt4 (0.2.0-1) unstable; urgency=low

  * Initial Debian packaging (Closes: #539008)

 -- Simon McVittie <smcv@debian.org>  Tue, 10 Nov 2009 14:49:41 +0000