@@ -1,1 +1,0 @@
-debian/tmp/usr/lib/libtelepathy-qt4.so.0*
