@@ -1,4 +1,3 @@
 debian/tmp/usr/lib/*.so
-debian/tmp/usr/lib/*.a
 debian/tmp/usr/include/telepathy-1.0
 debian/tmp/usr/lib/pkgconfig/*.pc
