@@ -1,1 +1,0 @@
-debian/tmp/usr/lib/libtelepathy-qt4-farsight.so.0*
