@@ -1,0 +1,1 @@
+debian/tmp/usr/lib/libtelepathy-qt4-farsight.so.1*
